# calcard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_all.rs  fuzz_random.rs  fuzz_structured.rs
resources/ical/: 000.ics.out  000.json  001.json  002.json  003.ics.out  003.json  004.ics.out  004.json  005.ics.out  005.json  006.ics.out  006.json  007.ics.out  007.json  008.ics.out  008.json  009.ics.out  009.json  010.ics.out  010.json  011.ics.out  011.json  012.ics.out  012.json  013.ics.out  013.json  014.ics.out  014.json  015.ics.out  016.ics.out  016.json  017.ics.out  017.json  018.ics.out  018.json  019.ics.out  019.json  020.ics.out  020.json  021.ics.out  (+365 more)
resources/jscalendar/: 001_simple.txt  002_related.txt  003_alert.txt  004_link.txt  005_participant.txt  006_location.txt  007_date.txt  008_recurrence.txt  009_icalcomponent.txt  010_complete.txt
resources/jscontact/: 001_general  001_general.txt  002_anniversary.txt  003_names.txt  004_gender.txt  005_address.txt  006_communication.txt  007_organizational.txt  008_personal.txt  009_explanatory.txt  010_security.txt  011_calendar.txt  012_unknown.txt  013_localizations.txt  014_rfc9553.txt  015_rfc6350.txt  016_rfc6715.txt  017_rfc9554.txt
resources/vcard/: 001.vcf.out  002.vcf.out  003.vcf.out  004.vcf.out  005.vcf.out  006.vcf.out  007.vcf.out  008.vcf.out  009.vcf.out  010.vcf.out  016.vcf.out  020.vcf.out  021.vcf.out  023.vcf.out  026.vcf.out  029.vcf.out  030.vcf.out  031.vcf.out  032.vcf.out  033.vcf.out  034.vcf.out  035.vcf.out  036.vcf.out  038.vcf.out  039.vcf.out  040.vcf.out  041.vcf.out  042.vcf.out  043.vcf.out  044.vcf.out  045.vcf.out  046.vcf.out  047.vcf.out  048.vcf.out  049.vcf.out  051.vcf.out  052.vcf.out  053.vcf.out  054.vcf.out  055.vcf.out  (+21 more)
src/: lib.rs  parser.rs  tokenizer.rs
src/common/: iana.rs  mod.rs  parser.rs  timezone.rs  tokenizer.rs  types.rs  writer.rs
src/datecalc/: checks.rs  counter_date.rs  easter.rs  error.rs  filters.rs  iterinfo.rs  mod.rs  monthinfo.rs  pos_list.rs  rrule.rs  rrule_iter.rs  rruleset.rs  rruleset_iter.rs  timezone.rs  utils.rs  validate.rs  yearinfo.rs
src/icalendar/: builder.rs  dates.rs  mod.rs  parser.rs  rkyv_timezone.rs  rkyv_types.rs  rkyv_utils.rs  rkyv_writer.rs  timezone.rs  types.rs  utils.rs  writer.rs
src/jscalendar/: mod.rs  parser.rs  types.rs
src/jscalendar/export/: convert.rs  entry.rs  mod.rs  params.rs  props.rs
src/jscalendar/import/: convert.rs  entry.rs  mod.rs  params.rs  props.rs
src/jscontact/: export.rs  import.rs  mod.rs  parser.rs  types.rs
src/jscontact/export/: convert.rs  entry.rs  mod.rs  params.rs  props.rs
src/jscontact/import/: convert.rs  entry.rs  mod.rs  params.rs  props.rs
src/vcard/: builder.rs  mod.rs  parser.rs  rkyv_types.rs  rkyv_utils.rs  rkyv_writer.rs  types.rs  utils.rs  writer.rs
web/: Cargo.toml  README.md  build.rs
web/site/: app.js  index.html  style.css
web/src/: lib.rs
