[package]
name = "calcard-web"
description = "WASM bindings and demo site for calcard (iCalendar/JSCalendar and vCard/JSContact conversion)"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
publish = false

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
calcard = { path = "..", features = ["wasm"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
